--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Add EC2 Host to known_hosts (important for first connection)
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H your-ec2-instance-ip-or-dns >> ~/.ssh/known_hosts
+          ssh-keyscan -H ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
         env:
           # Replace with your actual EC2 IP or DNS
@@ -31,7 +31,7 @@ jobs:
         # Remove -T if your commands need a pseudo-terminal
         # For deployment, often -T is fine or omitted, but if you need to run interactive commands, use -t
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@your-ec2-instance-ip-or-dns "ls -l /var/www/html; sudo systemctl restart nginx"
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com "ls -l /var/www/html; sudo systemctl restart nginx"
         env:
           # Replace with your EC2 user and IP/DNS
           EC2_USER: ec2-user
