--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2
+name: Deploy to EC2 with PEM key and Nginx fixes
 
 on:
   push:
@@ -12,27 +12,50 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup SSH agent
-        uses: webfactory/ssh-agent@v0.9.0 # Use the latest version
+      - name: Set up SSH agent
+        uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Add EC2 Host to known_hosts (important for first connection)
+      - name: Add EC2 Host to known_hosts
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ vars.EC2_HOST }} >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
         env:
-          # Replace with your actual EC2 IP or DNS
-          SSH_HOST: your-ec2-instance-ip-or-dns
+          EC2_HOST: ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com # Your EC2 DNS
 
       - name: Connect to EC2 and execute deployment commands
-        # Add -t if your commands require a pseudo-terminal (e.g., sudo)
-        # Remove -T if your commands need a pseudo-terminal
-        # For deployment, often -T is fine or omitted, but if you need to run interactive commands, use -t
+        # Removed -i ~/.ssh/id_rsa
+        # Updated 'ls' path for Amazon Linux/Nginx common setup
+        # Corrected service name if Nginx is not 'nginx.service' or installed if needed
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com "ls -l /var/www/html; sudo systemctl restart nginx"
+          # The -t option is good to keep if you have 'sudo' commands.
+          ssh -t ec2-user@${{ vars.EC2_HOST }} "
+            # Check if /var/www/html exists, if not, use /usr/share/nginx/html
+            # Or identify the correct path on your instance
+            if [ -d '/var/www/html' ]; then
+              ls -l /var/www/html;
+            elif [ -d '/usr/share/nginx/html' ]; then
+              ls -l /usr/share/nginx/html;
+            else
+              echo 'Neither /var/www/html nor /usr/share/nginx/html found. Please check path.';
+              exit 1; # Fail the step if path is not found
+            fi;
+
+            # Check if Nginx is installed, install if not (example for Amazon Linux)
+            # You might want to do this in a separate step or only once during setup
+            if ! command -v nginx &> /dev/null; then
+              echo 'Nginx not found, installing...';
+              sudo yum update -y && sudo yum install nginx -y;
+              sudo systemctl enable nginx; # Enable Nginx to start on boot
+            fi;
+
+            # Restart Nginx service (ensure the correct service name)
+            # For Amazon Linux, it's typically 'nginx'
+            sudo systemctl restart nginx;
+            echo 'Nginx restarted successfully (or confirmed)';
+          "
         env:
-          # Replace with your EC2 user and IP/DNS
-          EC2_USER: ec2-user
-          EC2_HOST: ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com
+          EC2_USER: ec2-user # For Amazon Linux 2/2023
+          EC2_HOST: ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com # Your EC2 DNS
