--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Deploy application files and manage with PM2
         # This step combines SSH commands for EC2 setup and local rsync for file transfer.
         run: |
-          # Define common variables used locally and remotely
+          # Define common variables used locally and remotely within this run step
           EC2_USER_VAL="ec2-user" # Directly define for local use
           EC2_HOST_VAL="ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com"
           
@@ -54,6 +54,7 @@ jobs:
           REMOTE_APP_DIR="/home/${EC2_USER_VAL}/${APP_NAME}" # Path on EC2
 
           # --- Step 1: Prepare EC2 environment (install rsync, create app directory, install pm2) ---
+          # This SSH block runs commands on the EC2 instance to prepare it.
           ssh -t "${EC2_USER_VAL}"@"${EC2_HOST_VAL}" "
             # Ensure rsync is installed
             if ! command -v rsync &> /dev/null; then
@@ -82,4 +83,89 @@ jobs:
 
           # --- Step 2: Copy built files from GitHub Actions runner to EC2 ---
           # These rsync commands run *locally* on the GitHub Actions runner,
-          # connecting
+          # connecting to EC2 via SSH. They MUST run *before* PM2 tries to start the app.
+          echo "Copying built NestJS dist/ folder..."
+          # Note: rsync ./dist/ to REMOTE_APP_DIR/ will place contents of local dist into remote APP_NAME directory
+          rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./dist/ "${EC2_USER_VAL}"@"${EC2_HOST_VAL}":"${REMOTE_APP_DIR}/"
+          
+          echo "Copying package.json..."
+          rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./package.json "${EC2_USER_VAL}"@"${EC2_HOST_VAL}":"${REMOTE_APP_DIR}/"
+          
+          echo "Copying package-lock.json..."
+          rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./package-lock.json "${EC2_USER_VAL}"@"${EC2_HOST_VAL}":"${REMOTE_APP_DIR}/" # Or yarn.lock if applicable
+
+          # --- Step 3: Manage NestJS application with PM2 on EC2 ---
+          # This SSH block runs commands on the EC2 instance to start/manage the app with PM2.
+          ssh -t "${EC2_USER_VAL}"@"${EC2_HOST_VAL}" "
+            # Stop and delete existing PM2 process for clean restart
+            pm2 delete ${APP_NAME} || true; # <-- Updated PM2 process name
+
+            # Navigate to app directory where files were copied
+            cd \"${REMOTE_APP_DIR}\";
+
+            # Start NestJS application with PM2 and environment variables
+            # Note: For security, sensitive keys like AI_API_KEY should ideally be
+            # injected via AWS Systems Manager Parameter Store or Secrets Manager
+            # and accessed by your app, rather than directly in PM2 commands.
+            # However, for direct passing as requested:
+            pm2 start dist/main.js --name ${APP_NAME} --interpreter node -- \
+              --env PORT=3000 \
+              --env CORS_ORIGIN='${{ vars.CORS_ORIGIN || 'http://localhost:8080' }}' \
+              --env API_PREFIX='${{ vars.API_PREFIX || 'api' }}' \
+              --env AI_API_BASE_URL='${{ vars.AI_API_BASE_URL || 'https://generativelanguage.googleapis.com/v1beta/models/' }}' \
+              --env AI_API_KEY='${{ secrets.AI_API_KEY }}' \
+              --env AI_AGENT='${{ vars.AI_AGENT || 'gemini-2.0-flash' }}';
+
+            # Save PM2 process list and configure startup on boot
+            pm2 save;
+            # This generates a systemd script to ensure PM2 processes restart after reboot
+            # Adjust the PATH if pm2 is not found by sudo, e.g., include ~/.nvm/.../bin
+            GLOBAL_NPM_BIN_PATH=\$(npm config get prefix)/bin;
+            sudo env PATH=\"\$PATH:\${GLOBAL_NPM_BIN_PATH}\" pm2 startup systemd -u ${EC2_USER_VAL} --hp /home/${EC2_USER_VAL};
+
+            pm2 list; # List running PM2 processes to confirm NestJS app is running
+          "
+        env:
+          # Define EC2_USER and EC2_HOST directly in env for this step
+          EC2_USER: ec2-user # For Amazon Linux 2/2023
+          EC2_HOST: ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com # Your EC2 DNS
+          # Default values for vars if they are not set (for safety)
+          CORS_ORIGIN: ${{ vars.CORS_ORIGIN || 'http://localhost:8080,http://example.com' }}
+          API_PREFIX: ${{ vars.API_PREFIX || 'api' }}
+          AI_API_BASE_URL: ${{ vars.AI_API_BASE_URL || 'https://generativelanguage.googleapis.com/v1beta/models/' }}
+          AI_AGENT: ${{ vars.AI_AGENT || 'gemini-2.0-flash' }}
+
+      - name: Configure Nginx as Reverse Proxy and Reload
+        # This step creates an Nginx config file on EC2 and reloads Nginx.
+        run: |
+          # Define Nginx configuration content for NestJS reverse proxy
+          NGINX_CONFIG="
+            server {
+                listen 80;
+                server_name $EC2_HOST; # Use your EC2 DNS or domain name
+
+                location / {
+                    proxy_pass http://localhost:3000; # NestJS app runs on port 3000
+                    proxy_http_version 1.1;
+                    proxy_set_header Upgrade \$http_upgrade;
+                    proxy_set_header Connection 'upgrade';
+                    proxy_set_header Host \$host;
+                    proxy_cache_bypass \$http_upgrade;
+                    proxy_set_header X-Real-IP \$remote_addr;
+                    proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto \$scheme;
+                }
+            }
+          "
+          # Transfer config to EC2 and reload Nginx
+          # 'echo "$NGINX_CONFIG" | sudo tee ...' is used to write content with sudo privileges
+          ssh -t "$EC2_USER"@"$EC2_HOST" "
+            echo \"$NGINX_CONFIG\" | sudo tee /etc/nginx/conf.d/jcg-quiz-api.conf > /dev/null; # <-- Updated config file name
+            echo 'Nginx configuration written to /etc/nginx/conf.d/jcg-quiz-api.conf';
+            sudo systemctl reload nginx; # Reload Nginx to apply new configuration
+            echo 'Nginx reloaded to apply new config.';
+          "
+        env:
+          # Define EC2_USER and EC2_HOST directly in env for this step
+          EC2_USER: ec2-user
+          EC2_HOST: ec2-15-164-171-168.ap-northeast-2.compute.amazonaws.com
