--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -147,15 +147,15 @@ jobs:
                 server_name $EC2_HOST; # This one is a shell variable, so $EC2_HOST is correct
 
                 location / {
-                    proxy_pass http://localhost:3000; # NestJS app runs on port 3000
+                    proxy_pass http://localhost:3000;
                     proxy_http_version 1.1;
-                    proxy_set_header Upgrade $$http_upgrade; # Corrected: $$ for Nginx internal variable
-                    proxy_set_header Connection 'upgrade'; # Already correct
-                    proxy_set_header Host $$host; # Corrected
-                    proxy_cache_bypass $$http_upgrade; # Corrected
-                    proxy_set_header X-Real-IP $$remote_addr; # Corrected
-                    proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for; # Corrected
-                    proxy_set_header X-Forwarded-Proto $$scheme; # Corrected
+                    proxy_set_header Upgrade $$http_upgrade;
+                    proxy_set_header Connection 'upgrade';
+                    proxy_set_header Host $$host;
+                    proxy_cache_bypass $$http_upgrade;
+                    proxy_set_header X-Real-IP $$remote_addr;
+                    proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $$scheme;
                 }
             }
           "
